Added Ticket: model, routes, samples, swagger description. Minor other changes.
