# server/src/routes/userRoutes.js
@@ -1,13 +1,13 @@
 const express = require('express');
 const router = express.Router();
 
-const { getAllUsers, getUserById, updateUserById } = require('../controllers/userController');
+const UserController = require('../controllers/userController');
 const { catchErrors } = require('../handlers/errorHandlers');
 
-router.get('/', catchErrors(getAllUsers));
+router.get('/', catchErrors(UserController.getAllUsers));
 
-router.get('/:id', catchErrors(getUserById));
+router.get('/:id', catchErrors(UserController.getUserById));
 
-router.put('/:id', catchErrors(updateUserById));
+router.put('/:id', catchErrors(UserController.updateUserById));
 
 module.exports = router;
